# agsconfig

./: .gitignore  AgsConfigIniSettings.cpp  AgsConfigIniSettings.h  AgsData.cpp  AgsData.h  AgsTold.cpp  AgsTold.h  CMakeLists.txt  CMakeSettings.json  FULL_LICENSE  LICENSE  README.md  agsconfig.cpp  agsdata.cpp  agsdata.h  agstold.cpp  agstold.h  azure-pipelines.yml  util_str.h
CMake/: FindLocalSDL2.cmake
agsconfigCore/: AgsConfigCore.cpp  AgsConfigCore.h  AgsConfigIniSettings.cpp  AgsConfigUtilStr.cpp  AgsConfigUtilStr.h  AgsData.cpp  AgsData.h  AgsTold.cpp
libs/tiny-process-library/: CMakeLists.txt
